numbat/tests/snapshots/prelude_and_examples__typecheck_error_snapshots@division_by_zero_in_const_eval.nbt.snap
---
source: numbat/tests/prelude_and_examples.rs
expression: output
input_file: examples/typecheck_error/division_by_zero_in_const_eval.nbt
---
error: while type checking
  ┌─ <internal:3>:1:16
  │
1 │ let x = meter^(1/0)
  │                ^^^ Division by zero in const. eval. expression
